hphp/hack/test/sound_dynamic/typing/trait_5g.bad.php.exp
File "trait_5g.bad.php", line 15, characters 12-16:
Invalid return type (Typing[4110])
  File "trait_5g.bad.php", line 14, characters 24-30:
  Expected `dynamic`
  File "trait_5g.bad.php", line 15, characters 12-16:
  Type `this` is not a subtype of `dynamic` under dynamic-aware subtyping
